refactor: change variable type of products